intensity ranged and made req post
